force-app/main/default/objects/Account_Information__c/Account_Information__c.object-meta.xml
<CustomObject>
    <description>Represents a product portfolio of a CB Client (created as part of EN-0924)</description>
    <label>Account Information</label>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>