force-app/main/default/objects/Account_Information__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <inlineHelpText>This field identities the name of the account, which is related to the legal entity</inlineHelpText>
    <label>Account Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>