force-app/main/default/objects/Account_Information__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>&quot;Status of the account
Salesforce field name is different from the api name
US-4297
US-4409
US-4425&quot;</description>
    <inlineHelpText>This is the status of the account</inlineHelpText>
    <label>Account Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>