force-app/main/default/objects/Account_Information__c/fields/Actual_Balance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Balance__c</fullName>
    <description>Actual balance is the total balance including uncleared funds, US-4533</description>
    <label>Actual Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>