force-app/main/default/objects/Account_Information__c/fields/Charge_Table__c.field-meta.xml
<CustomField>
    <fullName>Charge_Table__c</fullName>
    <inlineHelpText>This field identifies the fees/interest rate table on the account (from BDS)</inlineHelpText>
    <label>Charge Table</label>
    <length>100</length>
    <type>Text</type>
</CustomField>