force-app/main/default/objects/Account_Information__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>&quot;Unique customer number
Salesforce field name is different from the api name
US-4409
US-4456
US-4425&quot;</description>
    <inlineHelpText>This is the unique customer number</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Information</relationshipLabel>
    <relationshipName>Client_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>