force-app/main/default/objects/Account_Information__c/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <description>&quot;Total value of client&apos;s facilities or credit agreements that they have with the bank
Salesforce field name is different from the api name
US-4409
US-4425
US-4291&quot;</description>
    <inlineHelpText>This field identifies the current balance on the specified account (either in debit or credit balance)
Value of all the client&apos;s facilities with the bank</inlineHelpText>
    <label>Current Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>