force-app/main/default/objects/Account_Information__c/fields/Current_Limit__c.field-meta.xml
<CustomField>
    <fullName>Current_Limit__c</fullName>
    <description>&quot;Total credit lent to the entity
Salesforce field name is different from the api name
US-4409
US-4425
US-4291&quot;</description>
    <inlineHelpText>Total credit lent to the entity</inlineHelpText>
    <label>End of Month Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>