force-app/main/default/objects/Account_Information__c/fields/Current_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Payment__c</fullName>
    <description>Instalment (amount) due at the end of the month, US-4297</description>
    <label>End of Month Instalment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>