force-app/main/default/objects/Account_Information__c/fields/ERL__c.field-meta.xml
<CustomField>
    <fullName>ERL__c</fullName>
    <description>&quot;Maximum limit the bank is willing to lend without supporting documents if the entity falls within the scope of lending
US-4409
US-4425
US-4291&quot;</description>
    <inlineHelpText>This is the maximum limit the bank is willing to lend without supporting documents if the entity falls within the scope of lending</inlineHelpText>
    <label>ERL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>