force-app/main/default/objects/Account_Information__c/fields/Expected_Monthly_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Expected_Monthly_Turnover__c</fullName>
    <description>&quot;Average credit value based on the credits received in the account
US-4409
US-4425
US-4291&quot;</description>
    <inlineHelpText>Average credit value based on the credits received in the account</inlineHelpText>
    <label>Expected Monthly Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>