force-app/main/default/objects/Account_Information__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External Id used by PBB Lifestyle to match Account Information record names without leading zeroes with Account numbers received from the API US-4728</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>37</length>
    <type>Text</type>
</CustomField>