force-app/main/default/objects/Account_Information__c/fields/Facility_Limit__c.field-meta.xml
<CustomField>
    <fullName>Facility_Limit__c</fullName>
    <inlineHelpText>This field is the limit of the facility (i.e the loan limit)</inlineHelpText>
    <label>Facility Limit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>