force-app/main/default/objects/Account_Information__c/fields/Headroom__c.field-meta.xml
<CustomField>
    <fullName>Headroom__c</fullName>
    <description>&quot;Available credit limit to lend to the client for corporate cards, overdraft, BRCP, term loans
US-4409
US-4425
US-4291&quot;</description>
    <inlineHelpText>Maximum amount that the bank can lend to the client, based on turnover</inlineHelpText>
    <label>Headroom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>