force-app/main/default/objects/Account_Information__c/fields/Month_Since_Account_Open__c.field-meta.xml
<CustomField>
    <fullName>Month_Since_Account_Open__c</fullName>
    <description>Months since account was opened, account age, US-4297</description>
    <label>Month Since Account Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>