force-app/main/default/objects/Account_Information__c/fields/Net_Interest_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Interest_Income__c</fullName>
    <inlineHelpText>Net Interest Income (NII) is the difference between interest earned and interest paid</inlineHelpText>
    <label>Net Interest Income</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>