force-app/main/default/objects/Account_Information__c/fields/Non_Interest_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Non_Interest_Revenue__c</fullName>
    <inlineHelpText>Non-Interest Revenue (NIR) is income that is not derived from interest income i.e. service fees and transactional fees</inlineHelpText>
    <label>Non Interest Revenue</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>