force-app/main/default/objects/Account_Information__c/fields/Operating_Income__c.field-meta.xml
<CustomField>
    <fullName>Operating_Income__c</fullName>
    <inlineHelpText>Operating Income refers to the earnings before interest and taxes are deducted</inlineHelpText>
    <label>Operating Income</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>