force-app/main/default/objects/Account_Information__c/fields/PMT_Extract_Date__c.field-meta.xml
<CustomField>
    <fullName>PMT_Extract_Date__c</fullName>
    <inlineHelpText>This field identifies the date by which the data was extracted from PMT</inlineHelpText>
    <label>PMT Extract Date</label>
    <type>Date</type>
</CustomField>