force-app/main/default/objects/Account_Information__c/fields/Proact_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Proact_External_Id__c</fullName>
    <description>Concatenation of Account Number and BPID separated by a dash. used ot match accounts in Saelsforce with account list received from the API. US-4728</description>
    <externalId>true</externalId>
    <label>Proact External Id</label>
    <length>37</length>
    <type>Text</type>
</CustomField>