force-app/main/default/objects/Account_Information__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>&quot;Type of account the client has
US-4409
US-4425
US-4291&quot;</description>
    <inlineHelpText>This field identifies the high level product category that the client holds
This is the type of account that the client holds</inlineHelpText>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Wealth and Insurance</fullName>
            </value>
            <value>
                <fullName>Transaction Accounts</fullName>
            </value>
            <value>
                <fullName>Trade and Forex</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>