force-app/main/default/objects/Account_Information__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <inlineHelpText>This field identifies the type/name of the product that the client holds</inlineHelpText>
    <label>Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>