force-app/main/default/objects/Account_Information__c/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <description>&quot;Name of the product the client purchased
US-4409
US-4425
US-4291&quot;</description>
    <inlineHelpText>This field identifies the sub-level product category that the client holds
This is the name of the account that the client holds</inlineHelpText>
    <label>Product Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>BOL</fullName>
            </value>
            <value>
                <fullName>Merchant Acquiring</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Debtors Finance</fullName>
            </value>
            <value>
                <fullName>Overdraft</fullName>
            </value>
            <value>
                <fullName>Investments - Call</fullName>
            </value>
            <value>
                <fullName>Investments - Fixed</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Investments - Notice</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>VAF</fullName>
            </value>
            <value>
                <fullName>Commercial Property Finance</fullName>
            </value>
            <value>
                <fullName>Revolving Loans</fullName>
            </value>
            <value>
                <fullName>Term Loans</fullName>
            </value>
            <value>
                <fullName>Wealth</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>TPFA</fullName>
            </value>
            <value>
                <fullName>Current Accounts</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Corporate Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>