force-app/main/default/objects/Account_Information__c/fields/Rate_Primary__c.field-meta.xml
<CustomField>
    <fullName>Rate_Primary__c</fullName>
    <inlineHelpText>This field identifies the interest rate (either debit balance or credit balance) that the client holds on the product</inlineHelpText>
    <label>Rate (Primary)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>