force-app/main/default/objects/Account_Information__c/fields/YTD_Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>YTD_Credit_Balance__c</fullName>
    <inlineHelpText>This field identifies the YTD average of the credit balance on the product</inlineHelpText>
    <label>YTD Credit Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>