force-app/main/default/objects/Account_Information__c/fields/YTD_Debit_Balance__c.field-meta.xml
<CustomField>
    <fullName>YTD_Debit_Balance__c</fullName>
    <inlineHelpText>This field identifies the YTD average of the debit balance on the product</inlineHelpText>
    <label>YTD Debit Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>